--- a/gallery/templates/all-gallery/base.html
+++ b/gallery/templates/all-gallery/base.html
@@ -1,4 +1,6 @@
 {% load bootstrap4 %}
+{% load static%}
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -11,15 +13,15 @@
   {% endif %}
 
     {% block styles %}
-    {% bootstrap_css %}
-    <link rel="stylesheet" href="{% static 'css/basegallery.css' %}">
+        {% bootstrap_css %}
+        <link rel="stylesheet" href="{% static 'css/basegallery.css'%}">
     {% endblock %}
 
 </head>
 <body>
     {% include "navbar.html" %}
 
-    {% block content %} <h1 class='text-center'>Welcome to my gallery</h1> {%endblock%}
+    {% block content %} <h1 class='text-center'>Hollow Picture.</h1> {%endblock%}
 
     {% block scripts %}
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
