--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,3 +1,69 @@
-h1{
-    color: aqua;
+@import url('https://fonts.googleapis.com/css2?family=Merienda+One&display=swap');
+@import url("./basegallery.css");
+
+.headings {
+  font-family: 'Merienda One', cursive;
+}
+
+a {
+  text-decoration: none;
+}
+/* gallery */
+.photo-gallery {
+  margin-top: 30px;
+}
+
+
+
+.modal img {
+  border: 1px solid rgb(214, 214, 214);
+  border-radius: 5px;
+}
+
+.text-underline {
+  text-decoration: underline;
+}
+
+.modal-click:hover {
+  cursor:pointer;
+}
+
+@media only screen and (min-width : 320px) {
+
+}
+
+
+.btn-warning {
+  padding: 20px 0;
+  color: #f0f9ff;
+  background-color: #20a320;
+}
+
+.btn-warning .item.social {
+  text-align: center;
+}
+
+.btn-warning .item.social > a {
+  font-size: 20px;
+  width: 36px;
+  height: 36px;
+  line-height: 36px;
+  display: inline-block;
+  text-align: center;
+  border-radius: 50%;
+  box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.4);
+  margin: 0 8px;
+  color: #fff;
+  opacity: 0.75;
+}
+
+.btn-warning .item.social > a:hover {
+  opacity: 0.9;
+}
+
+.btn-warning .copyright {
+  text-align: center;
+  padding-top: 24px;
+  font-size: 13px;
+  margin-bottom: 0;
 }
