--- a/gallery/templates/all-gallery/search.html
+++ b/gallery/templates/all-gallery/search.html
@@ -5,42 +5,43 @@
         <div class="px-lg-5">
             <div class="row ">
                 <div class="col-lg-12 m-3">
-                    <h1 class="text-center headings" style="text-decoration: underline;"> Results For: <br>
+                    <h1 class="text-center headings" style="text-decoration: underline;">Search Results For: <br>
                         {{message }}
                     </h1>
                 </div>
             </div>
             <div class="row">
-                {% for Photo in Photos %}
-                <!-- Gallery Photo item start -->
+                {% for photo in Image %}
+               
+
                 <div class="col-xl-3 col-lg-4 col-md-12 mb-4">
-                    <div class="bg-white rounded shadow-sm"><img src="{{ Photo.image.url }}" alt=""
+                    <div class="bg-white rounded shadow-sm"><img src="{{ photo.image.url }}" alt=""
                             class="img-fluid card-img-top">
                         <div class="p-4">
                             <h5 class="headings text-center"> <a data-bs-toggle="modal"
-                                    data-bs-target="#modalDisplayImageDetails{{Photo.id}}"
+                                    data-bs-target="#modalDisplayImageDetails{{photo.id}}"
                                     class="text-dark text-capitalize modal-click">
-                                    {{ Photo.pic_name }}
+                                    {{ photo.pic_name }}
                                 </a></h5>
                             <div class="d-flex justify-content-between">
                                 <div>
                                     <small class="text-muted">
                                         <span class="badge rounded-pill bg-info text-white text-capitalize">
-                                            {{Photo.category }}
+                                            {{photo.category }}
                                         </span>
                                     </small>
                                 </div>
                                 <div>
                                     <small class="text-muted">
                                         <span class="badge rounded-pill bg-dark text-white text-capitalize">
-                                            {{Photo.location }}
+                                            {{photo.location }}
                                         </span>
                                     </small>
                                 </div>
                             </div>
                             <div
                                 class="d-flex align-items-center justify-content-between rounded-pill bg-warning px-3 py-2 mt-4">
-                                <a data-bs-toggle="modal" data-bs-target="#modalDisplayImageDetails{{Photo.id}}"
+                                <a data-bs-toggle="modal" data-bs-target="#modalDisplayImageDetails{{photo.id}}"
                                     class="text-dark modal-click">
                                     <p class="small mb-0">
                                         View More
@@ -48,32 +49,33 @@
                                     </p>
                                 </a>
                                 <div class="badge badge-danger px-3 rounded-pill font-weight-normal text-dark">
-                                    {{Photo.created_at|date}}
+                                    {{photo.created_at|date}}
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <!-- modal to display the image details -->
-                <div class="modal fade" id="modalDisplayImageDetails{{Photo.id}}" tabindex="-1"
+
+
+                <div class="modal fade" id="modalDisplayImageDetails{{photo.id}}" tabindex="-1"
                     aria-labelledby="modalDisplayImageDetailsLabel" aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title" id="modalDisplayImageDetailsLabel">{{ Photo.pic_name}} <small
+                                <h5 class="modal-title" id="modalDisplayImageDetailsLabel">{{ photo.name}} <small
                                         class="badge rounded-pill bg-warning text-dark">{{ photo.location}}</small></h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                     aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
-                                <img src="{{ Photo.image.url }}" alt="" class="img-fluid">
+                                <img src="{{ photo.image.url }}" alt="" class="img-fluid">
                                 <div class="content m-3">
                                     <h6 class="headings text-capitalize badge rounded-pill bg-warning text-dark">
-                                        <small>{{ Photo.category }}</small>
+                                        <small>{{ photo.category }}</small>
                                     </h6>
                                     <h4 class="headings text-underline">Description</h4>
                                     <p class="m-3 headings">
-                                        {{Photo.description }}
+                                        {{photo.description }}
                                     </p>
                                 </div>
                             </div>
