--- a/gallery/templates/navbar.html
+++ b/gallery/templates/navbar.html
@@ -1,6 +1,7 @@
 
+<div>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand " href="http://127.0.0.1:8000">Gallery</a>
+  <a class="navbar-brand " href="/">Gallery</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -8,23 +9,23 @@
   <div class="collapse navbar-collapse btn-info" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="http://127.0.0.1:8000">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li>
             <li class="nav-item active">
-        <a class="nav-link" href="http://127.0.0.1:8000/admin/">Admin <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/admin">Admin <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           About Us
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="http://127.0.0.1:8000">Us</a>
+          <a class="dropdown-item" href="/">Us</a>
           <a class="dropdown-item" href="#">Another action</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
       </li>
-      
+
     </ul>
         <form class="navbar-form" role="search" action="{% url 'search_results' %}">
 
@@ -37,4 +38,45 @@
 
         </form>
   </div>
+  
 </nav>
+<br>
+<hr>
+
+ <!-- scrolling images -->
+
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active  ">
+      <img src="https://static.boredpanda.com/blog/wp-content/uploads/2018/07/worlds-most-beautiful-nigerian-girl-jare-but-mofe-fb-png__700.jpg" class="d-block w-100" alt="..." wedith="500px" height="400">
+    </div>
+    <div class="carousel-item">
+      <img src="https://www.whatsappimages.in/wp-content/uploads/2020/05/Flower-Images-72-1024x635.jpg" class="d-block w-100" alt="..." wedith="500px" height="400">
+    </div>
+    <div class="carousel-item">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR77cXdawHOwrvBFateSDg6aDLyfvouvb82WA&usqp=CAU" class="d-block w-100" alt="..." wedith="500px" height="400">
+    </div>
+    <div class="carousel-item">
+      <img src="https://i.ytimg.com/vi/-3N6fCzgXuc/maxresdefault.jpg" class="d-block w-100" alt="..." wedith="500px" height="400">
+    </div>
+    <div class="carousel-item">
+      <img src="https://i2.wp.com/allpicts.in/wp-content/uploads/2017/01/beautiful-brown-eyes-picture-in-close-up-300x169.jpg" class="d-block w-100" alt="..." wedith="500px" height="400">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+<br>
+<hr>
+</div>
