--- a/gallery/templates/all-gallery/index.html
+++ b/gallery/templates/all-gallery/index.html
@@ -1,6 +1,6 @@
 {% extends "all-gallery/base.html" %}
 {% block content %}
-<div class="photo-gallery images">
+<div class="photo-gallery first">
   <div class="container-fluid">
     <div class="px-lg-5">
       
